# fast-pseudoprimes

./: CONTRIBUTING.md  Cargo.toml  LICENSE-THIRD-PARTY.txt  NOTICE  README.md
src/: bitset.rs  bloomfilter.rs  gray_prod_iter.rs  lib.rs  magic_numbers.rs  main.rs  modulus.rs  mulmod.rs  numa_threadpool.rs  progress.rs  time.rs
src/bitset/: mod.rs  stable.rs  unstable.rs
src/bloomfilter/: conc_bloom.rs  mod.rs
src/mulmod/: mod.rs  mulmod_asm.rs
