[package]
name = "pseudoprimes"
version = "0.1.0"
authors = ["Andrew Hopkins <andhop@amazon.com>"]
edition = "2021"

[dependencies]
modinverse = "0.1.1"
rug = "1.17.0"
threadpool = "1.8.1"
lazy_static = "1.4.0"
rand = "0.8.5"
itertools = "0.10.3"

[dependencies.nix]
version = "0.25.0"
optional = true

[dependencies.libc]
version = "0.2.132"
optional = true

[features]
default = []
unstable = ["libc"]
numa = ["libc", "nix"]
